[package]
name = "rupple"
version = "0.1.33"
edition = "2021"

[dependencies]
ctrlc = "3.4.7"
rand = "0.9.1"

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.29.0", default-features = false, features = [
    "windows",
] }
[target.'cfg(not(windows))'.dependencies]
crossterm = { version = "0.29.0", default-features = false}
